--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,42 @@
-plugins {
-    id 'java'
-    id 'idea'
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "io.qameta.allure:allure-gradle:2.5"
+    }
 }
 
-group 'com.gl-basecamp-2019'
-version '1.0'
-
-sourceCompatibility = 1.8
+apply plugin: 'java'
+apply plugin: 'io.qameta.allure'
 
 repositories {
     mavenCentral()
 }
 
+allure {
+    autoconfigure = true
+    version = '2.6.0'
+
+    useJUnit4 {
+        version = '2.6.0'
+    }
+
+}
+
+test {
+    useJUnit()
+}
+
+
+group 'com.bootcamp'
+version '0.0.1'
+
+sourceCompatibility = 1.8
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'    
     testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
-    compile group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: '2.23.0'
-
+    testCompile ("io.github.bonigarcia:webdrivermanager:3.6.1")
 
 }
